# linkreader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/linkreader/: cli.py  extractor.py  fetcher.py  models.py  pdf_parser.py  reporter.py  url_classifier.py  writer.py
tests/: test_extractor.py  test_pdf_parser.py  test_reporter.py  test_url_classifier.py  test_writer.py
